--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
             android:name=".activity.CincoActivity"
             android:label="@string/title_activity_cinco" >
         </activity>
+        <activity
+            android:name=".activity.MillionaireActivity"
+            android:label="@string/title_activity_millionaire" >
+        </activity>
     </application>
 
 </manifest>
